  - Better model of the YM2149 noise generation (no noticeable audible impact)
  - Slightly better volume table (measured by Paulo Simoes on a real ST)
- CPU changes :
  - Added experimental MMU emulation for the 68030 mode
- ACIA/IKBD changes :
  - Full implementation of the MC6850 ACIA, giving much more robust
    IKBD emulation
  - Better timings for all IKBD commands (measured on a real STF)
- Other changes :
  - Fix: GEMDOS HD emulation overwrote last 28 bytes of basepage space
    for the started process command line (with with program header)

Emulator:
- Fix: problems with run-time CPU type changing
- Much improved console redirection functionality and a separate --conout
  option for it (--bios-intercept doesn't anymore imply console redirection)
- Display handling:
  - Fix: max resolution limit wasn't handled properly for ST mode
  - Setup NVRAM video mode based on VDI mode, when in VDI mode.
    This makes VDI mode work with EmuTOS also under Falcon emulation
    which is useful as EmuTOS doesn't support native VIDEL expanders
  - Limit VDI screen memory usage to 300kB, this allows upto 2048x1200
    monochrome and 1024x600/800x768 16-color VDI screens
- GEMDOS HD emulation:
  - Give warning if GEMDOS dir/file path exceeds 8+3 characters
  - New --gemdos-case option to specify whether new dir/filenames
    are forced to be created in upper (default) or lower case
- SDL GUI:
  - Fileselector has "CWD" button for changing to Hatari's work directory
  - Fileselector remembers previous position which is nicer with
    large directories
- Profiler:
  - Fix: profiler assert on invalid PC register values
  - Fix: profiler usage in debugger files invoked by breakpoints
  - Fix: profiler CPU & DSP cycles information is for previous instruction
  - Fix: WinUAE CPU requires cycles counter usage for getting current
    CPU instruction cycles
  - Profiler provides timing information, based on used cycles