@@ -52,7 +52,7 @@
 <h1 class="pageheader">Hatari Atari Software Compatibility List</h1>
 
 <p class="pageheader">
-Version 1.6.2
+Version 1.7
 </p>
 <p class="pageheader">
 This list has been written by: <strong>Thomas Huth</strong>, <strong>Eero Tamminen</strong>
@@ -158,6 +158,11 @@ works on a real ST should work also in Hatari</b>.</p>
       <td>Armalyte</td>
       <td>before 1.0</td>
       <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Bolo</td>
+      <td>1.7</td>
+      <td>This game works in medium resolution and in monochrome</td>
     </tr>
     <tr>
       <td>Bubble Bobble</td>
@@ -303,13 +308,14 @@ works on a real ST should work also in Hatari</b>.</p>
     </tr>
     <tr>
       <td>Super Hang-On</td>
-      <td class="minor">1.4</td>
-      <td>Minor screen color sync issues</td>
+      <td>1.7</td>
+      <td>Requires Hatari &gt;= 1.7 to avoid flickering rasters</td>
     </tr>
     <tr>
       <td>Super Monaco GP</td>
-      <td>1.6</td>
-      <td>Requires at least Hatari 1.6 for correct FDC emulation</td>
+      <td>1.7</td>
+      <td>Requires Hatari &gt;= 1.6 for correct FDC emulation
+	  and Hatari &gt;= 1.7 to avoid flickering rasters</td>
     </tr>
     <tr>
       <td>Super Sprint</td>
@@ -425,6 +431,12 @@ for border removal).</p>
       <a href="http://pouet.net/prod.php?which=12635">Overdose</a></td>
       <td>before 1.0</td>
       <td>Does not work with cartridge / HD emulation</td>
+    </tr>
+    <tr>
+      <td>Big Alec:
+      <a href="http://pouet.net/prod.php?which=31510">Audio Artistic Demo</a></td>
+      <td>1.7</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>BushWacKers:
